# immobilier-notaires-client

./: .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: api_drift.md  bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: api-reference.md  ethics.md  fields-reference.md
docs/samples/: contacts-response.json  detail-response.json  search-response.json
examples/: enrich_detail.py  export_csv.py  search_by_department.py
scripts/: record_fixtures.py
src/notaires_immo/: __init__.py  cli.py  client.py  enums.py  exceptions.py  http.py  models.py  pagination.py  params.py  ratelimit.py
tests/: conftest.py  test_contract.py  test_models.py  test_pagination.py  test_params.py
