[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "immobilier-notaires-client"
version = "0.1.0"
description = "Python client for the public immobilier.notaires.fr listings API (unofficial, polite-by-default)."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Zhorba", url = "https://github.com/Zhorba/immobilier-notaires-client" }]
keywords = ["immobilier", "notaires", "real-estate", "france", "api-client"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = ["httpx>=0.27"]

[project.optional-dependencies]
cli = ["click>=8.0"]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",
    "ruff>=0.4",
    "mypy>=1.10",
    "click>=8.0",
]

[project.scripts]
notaires = "notaires_immo.cli:main"

[project.urls]
Homepage = "https://github.com/Zhorba/immobilier-notaires-client"
Documentation = "https://github.com/Zhorba/immobilier-notaires-client/tree/main/docs"
Issues = "https://github.com/Zhorba/immobilier-notaires-client/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/notaires_immo"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["live: hits the real API (skipped in CI)"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
